--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://Shymaa-ashqar.github.io/car-rental-ReactJS",    
-  "name": "car-rental-reactjs2021",
+  "name": "car-rental-reactjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
